revert CMakelists to default options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,8 +67,8 @@ option(ZEN_STATIC_LINK_LIBCXX "Option to statically link libstdc++ to be portabl
 option(ZEN_BLUETOOTH "Compile OpenZen with bluetooth support" ${ZEN_BLUETOOTH_DEFAULT})
 option(ZEN_BLUETOOTH_BLE "Compile OpenZen with bluetooth low-energy support, needs Qt installed" OFF)
 option(ZEN_NETWORK "Compile OpenZen with support for network streaming of measurement data" OFF)
-option(ZEN_CSHARP "Compile C# bindings for OpenZen" OFF)
-option(ZEN_PYTHON "Compile Python bindings for OpenZen" ON)
+option(ZEN_CSHARP "Compile C# bindings for OpenZen" ON)
+option(ZEN_PYTHON "Compile Python bindings for OpenZen" OFF)
 option(ZEN_TESTS "Compile with OpenZen tests" ON)
 option(ZEN_EXAMPLES "Compile with OpenZen examples" ON)
 option(ZEN_USE_BINARY_LIBRARIES "If set to true, binaries libraries are downloaded during the build" ON)
